.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:06:02 **** Rebuild of configuration Debug for project Primer Parcial Laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Primer Parcial Laboratorio.o" "..\\src\\Primer Parcial Laboratorio.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Request.o" "..\\src\\Request.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexus.o" "..\\src\\Nexus.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Input.o" "..\\src\\Input.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clients.o" "..\\src\\Clients.c" 
gcc -o "Primer Parcial Laboratorio.exe" "src\\Clients.o" "src\\Input.o" "src\\Nexus.o" "src\\Primer Parcial Laboratorio.o" "src\\Request.o" 
Info: Nothing to build for Primer Parcial Laboratorio
Info: Nothing to build for Primer Parcial Laboratorio
Info: Nothing to build for Primer Parcial Laboratorio
23:50:48 **** Incremental Build of configuration Debug for project Primer Parcial Laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Input.o" "..\\src\\Input.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Request.o" "..\\src\\Request.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clients.o" "..\\src\\Clients.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Primer Parcial Laboratorio.o" "..\\src\\Primer Parcial Laboratorio.c" 
..\src\Primer Parcial Laboratorio.c: In function 'main':
..\src\Primer Parcial Laboratorio.c:82:8: error: too many arguments to function 'addRequest'
   82 |     if(addRequest(arrayClients, MAX_CLIENT, arrayRequest, MAX_REQUEST, id, reqId, kilos) == -1){
      |        ^~~~~~~~~~
In file included from ..\src\Primer Parcial Laboratorio.c:8:
..\src\Nexus.h:15:5: note: declared here
   15 | int addRequest(sClient* clientList, int cliLen, sRequest* requestList, int reqLen, int clientId, int requestId);
      |     ^~~~~~~~~~
23:51:26 **** Incremental Build of configuration Debug for project Primer Parcial Laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Primer Parcial Laboratorio.o" "..\\src\\Primer Parcial Laboratorio.c" 
..\src\Primer Parcial Laboratorio.c: In function 'main':
..\src\Primer Parcial Laboratorio.c:27:8: warning: unused variable 'kilos' [-Wunused-variable]
   27 |  float kilos;
      |        ^~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Nexus.o" "..\\src\\Nexus.c" 
gcc -o "Primer Parcial Laboratorio.exe" "src\\Clients.o" "src\\Input.o" "src\\Nexus.o" "src\\Primer Parcial Laboratorio.o" "src\\Request.o" 
23:53:14 **** Incremental Build of configuration Debug for project Primer Parcial Laboratorio ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Primer Parcial Laboratorio.o" "..\\src\\Primer Parcial Laboratorio.c" 
gcc -o "Primer Parcial Laboratorio.exe" "src\\Clients.o" "src\\Input.o" "src\\Nexus.o" "src\\Primer Parcial Laboratorio.o" "src\\Request.o" 
